<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/activity_new_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/task_title_text"
            android:hint="@string/new_task_title_hint"
            android:maxLength="15"
            android:textStyle="bold"/>

        <EditText
            android:hint="@string/new_task_description_hint"
            android:id="@+id/description_text"
            android:lines="2"
            android:maxLines="2"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:datePickerMode="spinner"
                android:layout_marginLeft="-50dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="-50dp"
                android:layout_marginBottom="-30dp"
                android:id="@+id/date_picker"/>
            <TimePicker
                android:id="@+id/time_picker"
                android:layout_weight="1"
                android:scaleX="0.7"
                android:scaleY="0.7"
                android:timePickerMode="spinner"
                android:layout_marginLeft="-55dp"
                android:layout_marginStart="-55dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="-50dp"
                android:layout_marginEnd="-50dp"
                android:layout_marginBottom="-30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_text"
            android:id="@+id/alert_me_check_box"/>
        <RadioGroup
            android:visibility="gone"
            android:id="@+id/alert_me_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_1_day"
                android:text="@string/radio_1_day_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/radio_button_1_hour"
                android:text="@string/radio_1_hour_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/radio_button_15_mins"
                android:text="@string/radio_15_mins_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </LinearLayout>

</ScrollView>